edited pages to fix small issues (navbar not appearing when it should) (login widget not showing up)

--- a/styles/index.css
+++ b/styles/index.css
@@ -36,8 +36,3 @@ body {
     font-size: 100%;
     font-size: 50pt;
 }
-
-#navbar a {
-    display: none;
-    visibility: hidden;
-}
